# reactive-refarch-cloudformation

./: NOTICE  README.md  master.yaml
.github/workflows/: codeql-analysis.yml
infrastructure/: dynamodb.yaml  ecs-cluster.yaml  elasticache.yaml  kinesis.yaml  lambda.yaml  load-balancers.yaml  security-groups.yaml  vpc.yaml
infrastructure/reactive-cdk-app/: cdk.json  package-lock.json  package.json
infrastructure/reactive-cdk-app/lib/: reactive-cdk-app-stack.ts
services/kinesis-consumer/: Cargo.toml  Makefile  README.md  pom.xml
services/kinesis-consumer/cmd/: main.go
services/kinesis-consumer/model/: structs.go
services/kinesis-consumer/services/consumer/: tracking.pb.go
services/kinesis-consumer/services/persistence/: store_items.go  store_items_test.go
services/kinesis-consumer/src/: main.rs
services/kinesis-consumer/src/main/java/com/amazon/: Constants.java  KinesisConsumer.java  KinesisConsumerHandler.java
services/kinesis-consumer/src/main/java/com/amazon/proto/: TrackingEventProtos.java
services/kinesis-consumer/src/main/java/com/amazon/vo/: TrackingMessage.java
services/kinesis-consumer/src/main/proto/: tracking.proto
services/kinesis-consumer/src/model/: item.rs  tracking.rs
services/kinesis-consumer/src/persistence/: mod.rs
services/kinesis-consumer/src/persistence/dynamodb/: mod.rs
services/kinesis-consumer/src/test/java/com/amazon/: KinesisConsumerTest.java
services/redis-updater/: Cargo.toml  Makefile  README.md  pom.xml
services/redis-updater/cmd/: main.go
services/redis-updater/model/: structs.go
services/redis-updater/services/persistence/: store_data.go  store_data_test.go
services/redis-updater/src/: main.rs
services/redis-updater/src/main/java/com/amazon/: RedisUpdater.java  RedisUpdaterHandler.java
services/redis-updater/src/main/java/com/amazon/util/: Constants.java
services/redis-updater/src/main/java/com/amazon/vo/: TrackingMessage.java
services/redis-updater/src/model/: Item.rs
services/redis-updater/src/test/java/com/amazon/: RedisUpdaterTest.java
services/tracking-service/: service.yaml
services/tracking-service/reactive-quarkus/: pom.xml
services/tracking-service/reactive-vertx/: .dockerignore  .gitignore  pom.xml  (+3 more)
(+31 files in other folders)
