[package]
name = "kinesis-consumer-lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "1.1.3"
aws-sdk-kinesis = "1.11.0"
aws-sdk-dynamodb = "1.11.0"
aws_lambda_events = { version = "0.13.0", default-features = false, features = ["kinesis"] }

lambda_runtime = "0.9.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

base64 = "0.21.7"
async-trait = "0.1.77"

quick-protobuf = "0.8.0"
lazy_static = "1.4.0"
serde = "1.0.193"

uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }